--- a/kgrab/trunk/PKGBUILD
+++ b/kgrab/trunk/PKGBUILD
@@ -13,8 +13,9 @@ groups=('kde-extragear')
 depends=('kdebase-runtime')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
+install='kgrab.install'
 source=("http://download.kde.org/stable/${_kdever}/src/extragear/${pkgname}-${pkgver}-kde${_kdever}.tar.bz2")
-md5sums=('')
+md5sums=('dd3b7f7aae63bf53a286b21300562b23')
 
 build() {
 	cd $srcdir
