--- a/kgraphviewer/trunk/PKGBUILD
+++ b/kgraphviewer/trunk/PKGBUILD
@@ -10,11 +10,12 @@ arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'FDL')
 groups=('kde-extragear')
-depends=('kdebase-runtime')
+depends=('kdebase-runtime' 'graphviz')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
+install='kgraphviewer.install'
 source=("http://download.kde.org/stable/${_kdever}/src/extragear/${pkgname}-${pkgver}-kde${_kdever}.tar.bz2")
-md5sums=('')
+md5sums=('6751a209560450f079977844bcbbcbab')
 
 build() {
 	cd $srcdir
