--- a/kiconedit/trunk/PKGBUILD
+++ b/kiconedit/trunk/PKGBUILD
@@ -12,8 +12,9 @@ groups=('kde-extragear')
 depends=('kdebase-runtime')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
+install='kiconedit.install'
 source=("http://download.kde.org/stable/${pkgver}/src/extragear/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('')
+md5sums=('8814fc494fe5b6f06768b38a0a5f8a97')
 
 build() {
 	cd $srcdir
