--- a/kpovmodeler/trunk/PKGBUILD
+++ b/kpovmodeler/trunk/PKGBUILD
@@ -1,20 +1,21 @@
 # $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
-pkgname=
-pkgver=
+pkgname=kpovmodeler
+pkgver=1.1.3
 _kdever=4.1.2
 pkgrel=1
-pkgdesc=""
+pkgdesc="A graphical editor for povray scenes"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
-license=('GPL')
+license=('GPL' 'LGPL' 'FDL')
 groups=('kde-extragear')
-depends=('kdebase-runtime')
+depends=('kdebase-runtime' 'povray')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
+install='kpovmodeler.install'
 source=("http://download.kde.org/stable/${_kdever}/src/extragear/${pkgname}-${pkgver}-kde${_kdever}.tar.bz2")
-md5sums=('')
+md5sums=('9b07ccf380a68427458b05e0b6fd70ec')
 
 build() {
 	cd $srcdir
