upgpkg: kio_gopher 0.1.2-1
git-svn-id: file:///srv/repos/svn-packages/svn@13426 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kio_gopher/trunk/PKGBUILD
+++ b/kio_gopher/trunk/PKGBUILD
@@ -1,11 +1,11 @@
 # $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
-pkgname=
-pkgver=
+pkgname=kio_gopher
+pkgver=0.1.2
 _kdever=4.1.2
 pkgrel=1
-pkgdesc=""
+pkgdesc="Gopher kioslave"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
@@ -14,7 +14,7 @@ depends=('kdebase-runtime')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
 source=("http://download.kde.org/stable/${_kdever}/src/extragear/${pkgname}-${pkgver}-kde${_kdever}.tar.bz2")
-md5sums=('')
+md5sums=('5b4afc9fc9af34308cccb140438935cf')
 
 build() {
 	cd $srcdir
