--- a/kde-l10n-cs/trunk/PKGBUILD
+++ b/kde-l10n-cs/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Czech Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-cs')
 provides=('kde-i18n-cs')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('2d63225bbf4574e148693e97634b2c4e')
