--- a/kde-l10n-csb/trunk/PKGBUILD
+++ b/kde-l10n-csb/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Kashubian Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-csb')
 provides=('kde-i18n-csb')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('d90fec294e551c989421d289cd6f450b')
