--- a/kde-l10n-da/trunk/PKGBUILD
+++ b/kde-l10n-da/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Danish Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-da')
 provides=('kde-i18n-da')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('671917a9d301cb8e3ca420b8f4e71bb0')
