--- a/kde-l10n-de/trunk/PKGBUILD
+++ b/kde-l10n-de/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="German Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-de')
 provides=('kde-i18n-de')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('df38290c533134a23c11034b4c4ee3dc')
