--- a/kde-l10n-en_gb/trunk/PKGBUILD
+++ b/kde-l10n-en_gb/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="British English Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-en_gb')
 provides=('kde-i18n-en_gb')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/kde-l10n-en_GB-${pkgver}.tar.bz2")
 md5sums=('13b3519d2545d4e4c598956856a0e439')
