--- a/kde-l10n-eo/trunk/PKGBUILD
+++ b/kde-l10n-eo/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Esperanto Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-eo')
 provides=('kde-i18n-eo')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('a397ef93af130380102e46e545338e6b')
