--- a/kde-l10n-es/trunk/PKGBUILD
+++ b/kde-l10n-es/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Spanish Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-es')
 provides=('kde-i18n-es')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('4121a524dc90bb59732918f677c9b4da')
