add kdelibs to makedepends; introduce kde-l10n group
git-svn-id: file:///srv/repos/svn-packages/svn@13468 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kde-l10n-et/trunk/PKGBUILD
+++ b/kde-l10n-et/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Estonian Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-et')
 provides=('kde-i18n-et')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('e63beb0d0ff83000f1a7d843e3de4575')
