--- a/kde-l10n-fr/trunk/PKGBUILD
+++ b/kde-l10n-fr/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="French Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-fr')
 provides=('kde-i18n-fr')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('8aaf7e16939f58e7ed580332b7527244')
