--- a/kde-l10n-fy/trunk/PKGBUILD
+++ b/kde-l10n-fy/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Frisian Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-fy')
 provides=('kde-i18n-fy')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('2578ef10c76b68616ae3ab820267d58e')
