--- a/kde-l10n-ga/trunk/PKGBUILD
+++ b/kde-l10n-ga/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Irish Gaelic Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-ga')
 provides=('kde-i18n-ga')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('6989457d6cdf8d30f95e2613ff59afb6')
