--- a/kde-l10n-hi/trunk/PKGBUILD
+++ b/kde-l10n-hi/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Hindi Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-hi')
 provides=('kde-i18n-hi')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('7edd676ffa20bea726cbbe73edadb916')
