--- a/kde-l10n-it/trunk/PKGBUILD
+++ b/kde-l10n-it/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Italian Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-it')
 provides=('kde-i18n-it')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('5c4f961e60e5ef14a2f4b2885113b1ab')
