--- a/kde-l10n-kk/trunk/PKGBUILD
+++ b/kde-l10n-kk/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Kazakh Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-kk')
 provides=('kde-i18n-kk')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('9c96380025594a64f967a92ca2ee4d78')
