--- a/kde-l10n-ko/trunk/PKGBUILD
+++ b/kde-l10n-ko/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Korean Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-ko')
 provides=('kde-i18n-ko')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('f2867745a599624c926fe0207dc3d014')
