--- a/kde-l10n-ku/trunk/PKGBUILD
+++ b/kde-l10n-ku/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Kurdish Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-ku')
 provides=('kde-i18n-ku')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('1bc36ded91f347522458adea9f711722')
