--- a/kde-l10n-lv/trunk/PKGBUILD
+++ b/kde-l10n-lv/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Latvian Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-lv')
 provides=('kde-i18n-lv')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('78f6f316f23c8ceaec7fd37af243d954')
