add kdelibs to makedepends; introduce kde-l10n group
git-svn-id: file:///srv/repos/svn-packages/svn@13484 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kde-l10n-mk/trunk/PKGBUILD
+++ b/kde-l10n-mk/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Macedonian Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-mk')
 provides=('kde-i18n-mk')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('e25560c1efa4adf16561c4dedca579b3')
