--- a/kde-l10n-nb/trunk/PKGBUILD
+++ b/kde-l10n-nb/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Norwegian Bokmal Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-nb')
 provides=('kde-i18n-nb')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('d6e8916732f0da5b135dcc0ff6dd465f')
