--- a/kde-l10n-nds/trunk/PKGBUILD
+++ b/kde-l10n-nds/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Low Saxon Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-nds')
 provides=('kde-i18n-nds')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('72d56df2e9d047648383ee041bafbf15')
