add kdelibs to makedepends; introduce kde-l10n group
git-svn-id: file:///srv/repos/svn-packages/svn@13488 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kde-l10n-nl/trunk/PKGBUILD
+++ b/kde-l10n-nl/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Dutch Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-nl')
 provides=('kde-i18n-nl')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('cf59f4fb0699c6ec1722a06efadffda7')
