--- a/kde-l10n-nn/trunk/PKGBUILD
+++ b/kde-l10n-nn/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Norwegian Nynorsk Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-nn')
 provides=('kde-i18n-nn')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('e0f7088112c2097bfa902fa679599e0c')
