--- a/kde-l10n-pa/trunk/PKGBUILD
+++ b/kde-l10n-pa/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Panjabi/Punjabi Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-pa')
 provides=('kde-i18n-pa')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('6d5323a863cab8a54511a9e19ef7f81a')
