--- a/kde-l10n-pl/trunk/PKGBUILD
+++ b/kde-l10n-pl/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Polish Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-pl')
 provides=('kde-i18n-pl')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('c7455a4693c2344f80ba3434d916c946')
