--- a/kde-l10n-pt/trunk/PKGBUILD
+++ b/kde-l10n-pt/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Portuguese Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-pt')
 provides=('kde-i18n-pt')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('448c772994a18a85b0b64ce76b536928')
