add kdelibs to makedepends; introduce kde-l10n group
git-svn-id: file:///srv/repos/svn-packages/svn@13493 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kde-l10n-pt_br/trunk/PKGBUILD
+++ b/kde-l10n-pt_br/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Brazilian Portuguese Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-pt_br')
 provides=('kde-i18n-pt_br')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/kde-l10n-pt_BR-${pkgver}.tar.bz2")
 md5sums=('f1d7a3996e8ad7d50b0cab312f2d51b6')
