--- a/kde-l10n-ru/trunk/PKGBUILD
+++ b/kde-l10n-ru/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Russian Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-ru')
 provides=('kde-i18n-ru')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('6af70080c4b014327f35327a20166d7c')
