--- a/kde-l10n-sl/trunk/PKGBUILD
+++ b/kde-l10n-sl/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Slovenian Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-sl')
 provides=('kde-i18n-sl')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('4cb55017d272a27e6f9a686cc8db8219')
