--- a/kde-l10n-sr/trunk/PKGBUILD
+++ b/kde-l10n-sr/trunk/PKGBUILD
@@ -8,10 +8,11 @@ pkgdesc="Serbian Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-sr')
 provides=('kde-i18n-sr')
 depends=('xdg-utils')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 install='kde-l10n-sr.install'
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
