--- a/kde-l10n-sv/trunk/PKGBUILD
+++ b/kde-l10n-sv/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Swedish Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-sv')
 provides=('kde-i18n-sv')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('4ccfa63f4b09c1ddc94a062fe6cc0792')
