--- a/kde-l10n-ta/trunk/PKGBUILD
+++ b/kde-l10n-ta/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Tamil Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-ta')
 provides=('kde-i18n-ta')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('11a614853a358362600f790d69f59317')
