--- a/kde-l10n-tr/trunk/PKGBUILD
+++ b/kde-l10n-tr/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Turkish Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-tr')
 provides=('kde-i18n-tr')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('e77421da874e74c2d59ea72e8bf81f82')
