--- a/kde-l10n-uk/trunk/PKGBUILD
+++ b/kde-l10n-uk/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Ukrainian Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-uk')
 provides=('kde-i18n-uk')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('37afe81b119d9e43bb8a7758070988be')
