--- a/kde-l10n-wa/trunk/PKGBUILD
+++ b/kde-l10n-wa/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Walloon Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-wa')
 provides=('kde-i18n-wa')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('8e5da9214047a77f0272594c0939f470')
