add kdelibs to makedepends; introduce kde-l10n group
git-svn-id: file:///srv/repos/svn-packages/svn@13503 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kde-l10n-zh_cn/trunk/PKGBUILD
+++ b/kde-l10n-zh_cn/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Chinese Simplified Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-zh_cn')
 provides=('kde-i18n-zh_cn')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/kde-l10n-zh_CN-${pkgver}.tar.bz2")
 md5sums=('4b04dc9d027017d75367a82d8434eba6')
