add kdelibs to makedepends; introduce kde-l10n group
git-svn-id: file:///srv/repos/svn-packages/svn@13504 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kde-l10n-zh_tw/trunk/PKGBUILD
+++ b/kde-l10n-zh_tw/trunk/PKGBUILD
@@ -8,9 +8,10 @@ pkgdesc="Chinese Traditional Localization for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
+groups=('kde-l10n')
 replaces=('kde-i18n-zh_tw')
 provides=('kde-i18n-zh_tw')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/kde-l10n-zh_TW-${pkgver}.tar.bz2")
 md5sums=('8f41ed9dfe1f02a12b0a0e1106966817')
