--- a/dmraid/trunk/PKGBUILD
+++ b/dmraid/trunk/PKGBUILD
@@ -3,8 +3,8 @@
 #Contributor: Urs Wolfer <uwolfer @ fwo.ch>
 
 pkgname=dmraid
-pkgver=1.0.0.rc14
-pkgrel=4
+pkgver=1.0.0.rc15
+pkgrel=1
 pkgdesc="Device mapper RAID interface"
 url="http://people.redhat.com/~heinzm/sw/dmraid/"
 depends=(device-mapper)
@@ -13,9 +13,9 @@ license=('GPL')
 source=(http://people.redhat.com/~heinzm/sw/dmraid/src/$pkgname-$pkgver.tar.bz2
         dmraid_install
         dmraid_hook)
-md5sums=(a0e7d0bb5394e15c878ac86afd72c08e
-         8f8b6fb332fce85a27d72fc63385db70
-         8c944cab8c885192a90e518a8d794adf)
+md5sums=('2602887205a35f89b59eeba3a868150f'
+         '8f8b6fb332fce85a27d72fc63385db70'
+	 '8c944cab8c885192a90e518a8d794adf')
 
 build() {
   cd $startdir/src/$pkgname/$pkgver
