--- a/pyorbit/trunk/PKGBUILD
+++ b/pyorbit/trunk/PKGBUILD
@@ -2,21 +2,21 @@
 # Mantainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=pyorbit
-pkgver=2.14.3
+pkgver=2.24.0
 pkgrel=1
 pkgdesc="Python bindings for ORBit2"
 arch=(i686 x86_64)
 license=('LGPL')
 url="http://www.pygtk.org"
-depends=('python>=2.5' 'orbit2>=2.14.7-2')
+depends=('python>=2.5.2' 'orbit2>=2.14.16')
 makedepends=('pkgconfig')
 options=('!libtool')
-source=(http://ftp.gnome.org/pub/GNOME/sources/pyorbit/2.14/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('3c4d42ae1a7303fd85071a842617043f')
+source=(http://ftp.gnome.org/pub/GNOME/sources/pyorbit/2.24/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('574593815e75ee6e98062c75d6d1581f')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
-  ./configure --prefix=/usr
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  ./configure --prefix=/usr || return 1
   make || return 1
-  make DESTDIR=${startdir}/pkg install
+  make DESTDIR="${pkgdir}" install
 }
