upgpkg: gnome-python 2.22.3-1
git-svn-id: file:///srv/repos/svn-packages/svn@13541 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gnome-python/trunk/PKGBUILD
+++ b/gnome-python/trunk/PKGBUILD
@@ -3,21 +3,21 @@
 # Contributor: Sarah Hay <sarah@archlinux.org>
 
 pkgname=gnome-python
-pkgver=2.22.1
+pkgver=2.22.3
 pkgrel=1
 pkgdesc="gnome-python is a set of interfaces to gnome-libs."
 arch=(i686 x86_64)
 license=('LGPL')
-depends=('pygtk>=2.12.1' 'pyorbit>=2.14.2' 'libgnomeui>=2.22.1')
+depends=('pygtk>=2.13.0' 'pyorbit>=2.24.0' 'libgnomeui>=2.24.0')
 makedepends=('pkgconfig')
 options=('!libtool')
 url="http://www.pygtk.org/"
 source=(http://ftp.gnome.org/pub/gnome/sources/gnome-python/2.22/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('02054115dc86617da2a80eb87a1f988b')
+md5sums=('ab12d94954a57de39b25eb7903d8429c')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./waf configure --prefix=/usr || return 1
   ./waf build ${MAKEFLAGS} || return 1
-  ./waf install --destdir=${startdir}/pkg || return 1
+  ./waf install --destdir="${pkgdir}" || return 1
 }
