--- a/vino/trunk/PKGBUILD
+++ b/vino/trunk/PKGBUILD
@@ -2,29 +2,29 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=vino
-pkgver=2.22.2
-pkgrel=3
+pkgver=2.24.0
+pkgrel=1
 pkgdesc="a VNC server for the GNOME desktop"
 arch=(i686 x86_64)
 license=('GPL')
-depends=('libgnomeui>=2.22.1' 'libnotify>=0.4.4' 'libxtst' 'gnutls>=2.4.1')
+depends=('libgnomeui>=2.4.0' 'libnotify>=0.4.4' 'libxtst' 'gnutls>=2.4.1')
 makedepends=('perlxml' 'pkgconfig')
 groups=('gnome-extra')
 url="http://www.gnome.org"
 options=(!emptydirs)
 install=vino.install
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.22/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('be507a80ec2c3cd5888060b81ff74f4e')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.24/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('c02bec87196e1655043c60870bfec7a7')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --sysconfdir=/etc \
               --libexecdir=/usr/lib/vino \
               --localstatedir=/var || return 1
   make || return 1
-  make GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR=${startdir}/pkg install || return 1
+  make GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install || return 1
   
-  install -m755 -d ${startdir}/pkg/usr/share/gconf/schemas
-  gconf-merge-schema ${startdir}/pkg/usr/share/gconf/schemas/${pkgname}.schemas ${startdir}/pkg/etc/gconf/schemas/*.schemas || return 1
-  rm -f ${startdir}/pkg/etc/gconf/schemas/*.schemas
+  install -m755 -d "${pkgdir}/usr/share/gconf/schemas"
+  gconf-merge-schema "${pkgdir}/usr/share/gconf/schemas/${pkgname}.schemas" ${pkgdir}/etc/gconf/schemas/*.schemas || return 1
+  rm -f ${pkgdir}/etc/gconf/schemas/*.schemas
 }
