--- a/gedit/trunk/PKGBUILD
+++ b/gedit/trunk/PKGBUILD
@@ -2,28 +2,28 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gedit
-pkgver=2.22.3
+pkgver=2.24.0
 pkgrel=1
 pkgdesc="A text editor for GNOME"
 arch=(i686 x86_64)
 license=('GPL')
-depends=('pygtk>=2.12.1' 'pygtksourceview2>=2.2.0' 'enchant>=1.4.2' 'libgnomeui>=2.22.1' 'desktop-file-utils' 'iso-codes' 'gtksourceview2>=2.2.1')
-makedepends=('perlxml' 'pkgconfig' 'gnome-doc-utils>=0.12.2')
+depends=('gconf>=2.24.0' 'pygtk>=2.13.0' 'pygtksourceview2>=2.4.0' 'enchant>=1.4.2' 'desktop-file-utils' 'iso-codes')
+makedepends=('perlxml' 'pkgconfig' 'gnome-doc-utils>=0.14.0')
 groups=('gnome-extra')
 options=('!libtool' '!emptydirs')
 url="http://www.gnome.org"
 install=gedit.install
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.22/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('9af45548bf8f2c335906c95877df4699')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.24/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('c6a13bd45ddde3e6a1e45131f430086b')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var \
               --libexecdir=/usr/lib --disable-scrollkeeper || return 1
   make || return 1
-  make -j1 GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR=${startdir}/pkg install || return 1
+  make -j1 GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install || return 1
  
-  install -m755 -d ${startdir}/pkg/usr/share/gconf/schemas
-  gconf-merge-schema ${startdir}/pkg/usr/share/gconf/schemas/${pkgname}.schemas ${startdir}/pkg/etc/gconf/schemas/*.schemas || return 1
-  rm -f ${startdir}/pkg/etc/gconf/schemas/*.schemas
+  install -m755 -d "${pkgdir}/usr/share/gconf/schemas"
+  gconf-merge-schema "${pkgdir}/usr/share/gconf/schemas/${pkgname}.schemas" ${pkgdir}/etc/gconf/schemas/*.schemas || return 1
+  rm -f ${pkgdir}/etc/gconf/schemas/*.schemas
 }
