--- a/gedit/trunk/PKGBUILD
+++ b/gedit/trunk/PKGBUILD
@@ -18,6 +18,10 @@ md5sums=('c6a13bd45ddde3e6a1e45131f430086b')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
+
+  #http://bugzilla.gnome.org/show_bug.cgi?id=553883
+  sed -e 's/"ISO-8859-15"/"[ISO-8859-15]"/' -i po/hr.po || return 1
+
   ./configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var \
               --libexecdir=/usr/lib --disable-scrollkeeper || return 1
   make || return 1
