--- a/gtkhtml/trunk/PKGBUILD
+++ b/gtkhtml/trunk/PKGBUILD
@@ -2,23 +2,23 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gtkhtml
-pkgver=3.18.3
+pkgver=3.24.0
 pkgrel=1
 pkgdesc="A lightweight HTML renderer/editor widget"
 arch=(i686 x86_64)
 license=('GPL')
-depends=('libgnomeui>=2.22.1' 'gnome-icon-theme>=2.22.0')
+depends=('libgnomeui>=2.24.0' 'gnome-icon-theme>=2.24.0' 'enchant>=1.4.2')
 makedepends=('pkgconfig' 'perlxml')
 url="http://www.gnome.org"
 options=('!libtool')
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/3.18/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('4dae02a10f05fbca1cfd3bb5336f9273')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/3.24/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('e83404511fb87837b0fac406b1c77400')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --sysconfdir=/etc \
               --libexecdir=/usr/lib/gtkhtml \
               --localstatedir=/var --disable-static || return 1
   make || return 1
-  make DESTDIR=${startdir}/pkg install || return 1
+  make DESTDIR="${pkgdir}" install || return 1
 }
