--- a/syslinux/trunk/PKGBUILD
+++ b/syslinux/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: lowercase
 # Maintainer: Dale Blount <dale@archlinux.org>
 pkgname=syslinux
-pkgver=3.60
+pkgver=3.72
 pkgrel=1
 arch=('i686' 'x86_64')
 pkgdesc="a boot loader for the Linux operating system which operates off an MS-DOS/Windows FAT filesystem."
@@ -15,11 +15,13 @@ replaces=()
 backup=()
 install=
 source=(http://www.kernel.org/pub/linux/utils/boot/syslinux/$pkgname-$pkgver.tar.bz2)
-md5sums=('96e11c6baa87a937b0726b07d687cb7b')
+options=(!makeflags)
 
 build() {
   cd $startdir/src/$pkgname-$pkgver
+  sed -i -e 's#win32/syslinux.exe##g' Makefile
   make || return 1
-  make SBINDIR=$startdir/pkg/usr/sbin BINDIR=$startdir/pkg/usr/bin LIBDIR=$startdir/pkg/usr/lib INCDIR=$startdir/pkg/usr/include MANDIR=$startdir/pkg/usr/share/man install
-	install -m755 mkdiskimage $startdir/pkg/usr/bin || return 1
+  make SBINDIR=$startdir/pkg/usr/sbin BINDIR=$startdir/pkg/usr/bin INCDIR=$startdir/pkg/usr/include MANDIR=$startdir/pkg/usr/share/man AUXDIR=$startdir/pkg/usr/lib/syslinux install
+	#install -m755 mkdiskimage $startdir/pkg/usr/bin || return 1
 }
+md5sums=('9858c801ecd36265f4374996324f01a0')
