upgpkg: mythtv 23562-1 Fixed FS18326
git-svn-id: file:///srv/repos/svn-packages/svn@68936 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/mythtv/trunk/PKGBUILD
+++ b/mythtv/trunk/PKGBUILD
@@ -5,34 +5,32 @@
 # Contributor: dorphell <dorphell@archlinux.org>
 
 pkgname=mythtv
-pkgver=0.22
-pkgrel=8
+pkgver=23562
+pkgrel=1
 pkgdesc="A Homebrew PVR project"
 arch=('i686' 'x86_64')
 url="http://www.mythtv.org/"
 license=('GPL')
-groups=('pvr')
 depends=('mysql-clients' 'qt' 'lame' 'lirc-utils' 'ffmpeg' 'libxvmc' 'fribidi' 
          'perl-soap-lite' 'perl-date-manip' 'perl-xml-sax' 'perl-math-round' 
          'perl-net-upnp' 'perl-dbd-mysql' 'perl-time-hires' 'libavc1394' 'wget' 
          'libiec61883' 'mysql-python' 'mesa' 'libxinerama' 'libxrandr' 'yasm')
-optdepends=('xmltv: to download tv listings'
-            'mythplugins: plugins for mythtv')
+optdepends=('xmltv: to download tv listings')
+replaces=('mythtv-contrib')
 backup=('etc/conf.d/mythbackend')
 install=mythtv.install
-source=(ftp://ftp.osuosl.org/pub/mythtv/${pkgname}-${pkgver}.tar.bz2 
+source=(ftp://ftp.archlinux.org/other/${pkgname}/${pkgname}-${pkgver}.tar.gz 
         mythbackend 
         archlinux.conf.d.mythbackend)
-md5sums=('e8f8b5b6a51cd7be700e215b2a1bf2c0' 
-         'feadcc9ad064d93d6dceab1efc0bd9ed' 
+md5sums=('e487de15bcf44214557ad3a1e8e9697d'
+         'feadcc9ad064d93d6dceab1efc0bd9ed'
          'bb8e4033d82428d827570fae9ba15e6a')
 
 build() {
-  cd "${srcdir}/${pkgname}-${pkgver}"
+  cd "${srcdir}/${pkgname}"
 
   ARCH=${CARCH/_/-}
   ./configure --prefix=/usr --cpu=${ARCH} \
-              --mandir=/usr/share/man \
               --enable-mmx \
               --enable-audio-oss \
               --enable-audio-alsa \
@@ -66,10 +64,15 @@ build() {
               --with-bindings=perl,python
 
   qmake mythtv.pro
-  make || return 1
+  make all || return 1
   # basic install
   make INSTALL_ROOT="${pkgdir}" install || return 1
   install -D -m0755 ${srcdir}/mythbackend "${pkgdir}/etc/rc.d/mythbackend" || return 1
   # config file
   install -D -m644 ${srcdir}/archlinux.conf.d.mythbackend "${pkgdir}/etc/conf.d/mythbackend" || return 1
+  # install contrib files
+  cp -a contrib/$i ${pkgdir}/usr/share/mythtv
+  # install database structure
+  cd database
+  cp -a mc.sql ${pkgdir}/usr/share/mythtv
 }
