upgpkg: mythtv 23562-2 small fix
git-svn-id: file:///srv/repos/svn-packages/svn@68942 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/mythtv/trunk/PKGBUILD
+++ b/mythtv/trunk/PKGBUILD
@@ -6,7 +6,7 @@
 
 pkgname=mythtv
 pkgver=23562
-pkgrel=1
+pkgrel=2
 pkgdesc="A Homebrew PVR project"
 arch=('i686' 'x86_64')
 url="http://www.mythtv.org/"
@@ -17,6 +17,7 @@ depends=('mysql-clients' 'qt' 'lame' 'lirc-utils' 'ffmpeg' 'libxvmc' 'fribidi'
          'libiec61883' 'mysql-python' 'mesa' 'libxinerama' 'libxrandr' 'yasm')
 optdepends=('xmltv: to download tv listings')
 replaces=('mythtv-contrib')
+conflicts=('mythtv-contrib')
 backup=('etc/conf.d/mythbackend')
 install=mythtv.install
 source=(ftp://ftp.archlinux.org/other/${pkgname}/${pkgname}-${pkgver}.tar.gz 
