upgpkg: mythplugins 23562-1 Fixed FS18326
git-svn-id: file:///srv/repos/svn-packages/svn@68951 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/mythplugins/trunk/PKGBUILD
+++ b/mythplugins/trunk/PKGBUILD
@@ -14,24 +14,21 @@ pkgname=('mythplugins-mytharchive'
          'mythplugins-mythweather'
          'mythplugins-mythweb'
          'mythplugins-mythzoneminder')
-pkgver=0.22
-pkgrel=4
+pkgver=23562
+pkgrel=1
 arch=('i686' 'x86_64')
 url="http://www.mythtv.org"
 license=('GPL')
-groups=('mythplugins')
 makedepends=("mythtv>=${pkgver}" 'mplayer' 'fftw' 'dvdauthor' 'libexif' 
-             'python-imaging' 'libcdaudio' 'taglib' 'php-apache' 
-             'perl-xml-simple')
-source=(ftp://ftp.osuosl.org/pub/mythtv/${pkgbase}-${pkgver}.tar.bz2
-        mtd
-        mythweb.conf.apache)
-md5sums=('09c8fa1058399a0c5db169a71561e985'
-         '476c12ba074794ad7f4ae092bdf949d6'
-         'dd3c2198b160d2e602390d4721b91232')
+             'python-imaging' 'libcdaudio' 'taglib' 'perl-xml-simple' 
+             'libvisual')
+source=(ftp://ftp.archlinux.org/other/mythtv/mythtv-plugins-${pkgver}.tar.gz 
+        mtd)
+md5sums=('e140ca4da76394d9dd1fb9abb1769c57'
+         '476c12ba074794ad7f4ae092bdf949d6')
 
 build() {
-  cd "${srcdir}/${pkgbase}-${pkgver}"
+  cd "${srcdir}/${pkgbase}"
   ./configure --prefix=/usr \
               --enable-all
 
@@ -43,7 +40,7 @@ package_mythplugins-mytharchive() {
   pkgdesc="MythTV plugin that lets you create DVDs from or archive your recorded shows"
   depends=("mythtv>=${pkgver}" 'libxmu' 'pil' 'dvdauthor')
   replaces=('mytharchive')
-  cd "${srcdir}/${pkgbase}-${pkgver}/mytharchive"
+  cd "${srcdir}/${pkgbase}/mytharchive"
   make INSTALL_ROOT="${pkgdir}" install || return 1
 }
 
@@ -51,7 +48,7 @@ package_mythplugins-mythbrowser() {
   pkgdesc="Mini web browser for MythTV"
   depends=("mythtv>=${pkgver}")
   replaces=('mythbrowser')
-  cd "${srcdir}/${pkgbase}-${pkgver}/mythbrowser"
+  cd "${srcdir}/${pkgbase}/mythbrowser"
   make INSTALL_ROOT="${pkgdir}" install || return 1
 }
 
@@ -59,7 +56,7 @@ package_mythplugins-mythflix() {
   pkgdesc="Netflix access plugin for MythTV"
   depends=("mythtv>=${pkgver}")
   replaces=('mythflix')
-  cd "${srcdir}/${pkgbase}-${pkgver}/mythflix"
+  cd "${srcdir}/${pkgbase}/mythflix"
   make INSTALL_ROOT="${pkgdir}" install || return 1
 }
 
@@ -67,7 +64,7 @@ package_mythplugins-mythgallery() {
   pkgdesc="Image gallery plugin for MythTV"
   depends=("mythtv>=${pkgver}" 'libexif')
   replaces=('mythgallery')
-  cd "${srcdir}/${pkgbase}-${pkgver}/mythgallery"
+  cd "${srcdir}/${pkgbase}/mythgallery"
   make INSTALL_ROOT="${pkgdir}" install || return 1
 }
 
@@ -75,7 +72,7 @@ package_mythplugins-mythgame() {
   pkgdesc="Game emulator module for MythTV"
   depends=("mythtv>=${pkgver}" 'zlib')
   replaces=('mythgame')
-  cd "${srcdir}/${pkgbase}-${pkgver}/mythgame"
+  cd "${srcdir}/${pkgbase}/mythgame"
   make INSTALL_ROOT="${pkgdir}" install || return 1
 }
 
@@ -83,15 +80,15 @@ package_mythplugins-mythmovies() {
   pkgdesc="Local movie listings via MythTV"
   depends=("mythtv>=${pkgver}")
   replaces=('mythmovies')
-  cd "${srcdir}/${pkgbase}-${pkgver}/mythmovies"
+  cd "${srcdir}/${pkgbase}/mythmovies"
   make INSTALL_ROOT="${pkgdir}" install || return 1
 }
 
 package_mythplugins-mythmusic() {
   pkgdesc="Music playing plugin for MythTV"
-  depends=("mythtv>=${pkgver}" 'fftw' 'flac' 'libcdaudio' 'libmad' 'taglib')
+  depends=("mythtv>=${pkgver}" 'flac' 'libcdaudio' 'cdparanoia' 'taglib' 'libvisual')
   replaces=('mythmusic')
-  cd "${srcdir}/${pkgbase}-${pkgver}/mythmusic"
+  cd "${srcdir}/${pkgbase}/mythmusic"
   make INSTALL_ROOT="${pkgdir}" install || return 1
 }
 
@@ -99,7 +96,7 @@ package_mythplugins-mythnews() {
   pkgdesc="News checking plugin for MythTV"
   depends=("mythtv>=${pkgver}")
   replaces=('mythnews')
-  cd "${srcdir}/${pkgbase}-${pkgver}/mythnews"
+  cd "${srcdir}/${pkgbase}/mythnews"
   make INSTALL_ROOT="${pkgdir}" install || return 1
 }
 
@@ -107,7 +104,7 @@ package_mythplugins-mythvideo() {
   pkgdesc="Video playback and browsing plugin for MythTV"
   depends=("mythtv>=${pkgver}" 'mplayer' 'perl-xml-simple')
   replaces=('mythvideo')
-  cd "${srcdir}/${pkgbase}-${pkgver}/mythvideo"
+  cd "${srcdir}/${pkgbase}/mythvideo"
   make INSTALL_ROOT="${pkgdir}" install || return 1
   install -D -m755 ${srcdir}/mtd "${pkgdir}/etc/rc.d/mtd" || return 1
 }
@@ -116,19 +113,18 @@ package_mythplugins-mythweather() {
   pkgdesc="Weather checking plugin for MythTV"
   depends=("mythtv>=${pkgver}")
   replaces=('mythweather')
-  cd "${srcdir}/${pkgbase}-${pkgver}/mythweather"
+  cd "${srcdir}/${pkgbase}/mythweather"
   make INSTALL_ROOT="${pkgdir}" install || return 1
 }
 
 package_mythplugins-mythweb() {
   pkgdesc="Web interface for MythTV's backend"
-  depends=("mythtv>=${pkgver}" 'php-apache')
+  depends=("mythtv>=${pkgver}")
+  optdepends=('php-apache'
+              'lighttpd')
   replaces=('mythweb')
-  install=mythplugins-mythweb.install
   mkdir -p ${pkgdir}/srv/http/mythweb/{image_cache,php_sessions}
-  cp -r ${srcdir}/mythplugins-$pkgver/mythweb/* ${pkgdir}/srv/http/mythweb
-  rm ${pkgdir}/srv/http/mythweb/README
-  install -m644 ${srcdir}/mythweb.conf.apache ${pkgdir}/srv/http/mythweb/mythweb.conf.apache
+  cp -r ${srcdir}/mythplugins/mythweb/* ${pkgdir}/srv/http/mythweb
   chown -R http:http ${pkgdir}/srv/http/mythweb
   chmod g+rw ${pkgdir}/srv/http/mythweb/{image_cache,php_sessions,data}
 }
@@ -138,6 +134,6 @@ package_mythplugins-mythzoneminder() {
   depends=("mythtv>=${pkgver}")
   replaces=('mythzoneminder')
   install=mythplugins-mythzoneminder.install
-  cd "${srcdir}/${pkgbase}-${pkgver}/mythzoneminder"
+  cd "${srcdir}/${pkgbase}/mythzoneminder"
   make INSTALL_ROOT="${pkgdir}" install || return 1
 }
