upgpkg: myththemes 23562-1 Fixed FS18326
git-svn-id: file:///srv/repos/svn-packages/svn@68961 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/myththemes/trunk/PKGBUILD
+++ b/myththemes/trunk/PKGBUILD
@@ -4,18 +4,18 @@
 # Contributor: kleptophobiac@gmail.com
 
 pkgname=myththemes
-pkgver=0.22
-pkgrel=2
+pkgver=23562
+pkgrel=1
 pkgdesc="Themes for MythTV"
 arch=('i686' 'x86_64')
 url="http://www.mythtv.org/"
 license=('GPL')
 depends=("mythtv>=${pkgver}")
-source=("ftp://ftp.osuosl.org/pub/mythtv/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('a5f00f152fb430a20c70aaa3bf456347')
+source=(ftp://ftp.archlinux.org/other/mythtv/mythtv-themes-${pkgver}.tar.gz)
+md5sums=('549db542193633bc11a52fb46ebf5971')
 
 build() {
-  cd "${srcdir}/${pkgname}-${pkgver}"
+  cd "${srcdir}/${pkgname}"
 
   ./configure --prefix=/usr 
   # basic install
