--- a/vim-omnicppcomplete/trunk/PKGBUILD
+++ b/vim-omnicppcomplete/trunk/PKGBUILD
@@ -1,11 +1,12 @@
 # $Id$
-# Maintainer : Aaron Griffin <aaron@archlinux.org>
+# Contributor: Aaron Griffin <aaron@archlinux.org>
+# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=vim-omnicppcomplete
 #I know the next version will be 0.5 just to break our crap
 pkgver=0.4.1
 _scriptid=7722
-pkgrel=4
+pkgrel=5
 pkgdesc="vim c++ completion omnifunc with a ctags database"
 arch=('any')
 url="http://www.vim.org/scripts/script.php?script_id=1520"
@@ -18,12 +19,16 @@ md5sums=('0978a565f95d8980a0035133144db639')
 
 build()
 {
-  cd "${srcdir}"
-  installpath="${pkgdir}/usr/share/vim/vimfiles"
+	/bin/true
+}
 
-  mkdir -p ${installpath}
-  cp -r doc after autoload ${installpath}
+package() {
+	cd "${srcdir}"
+	installpath="${pkgdir}/usr/share/vim/vimfiles"
 
-  #just in case... make sure it's all 644
-  find ${installpath} -type f -exec chmod 644 {} \;
+	mkdir -p ${installpath}
+	cp -r doc after autoload ${installpath}
+
+	#just in case... make sure it's all 644
+	find ${installpath} -type f -exec chmod 644 {} \;
 }
