Move to splitpkg format
git-svn-id: file:///srv/repos/svn-packages/svn@69007 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/vim-buftabs/trunk/PKGBUILD
+++ b/vim-buftabs/trunk/PKGBUILD
@@ -1,12 +1,13 @@
 # $Id$
-# Maintainer: Aaron Griffin <aaron@archlinux.org>
+# Contributor: Aaron Griffin <aaron@archlinux.org>
+# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=vim-buftabs
 pkgver=0.13
 _scriptid=10557
 pkgrel=2
 pkgdesc="Minimalistic buffer tabs saving screen space"
-arch=(i686 x86_64)
+arch=('any')
 url="http://www.vim.org/scripts/script.php?script_id=1664"
 license=('GPL')
 depends=('vim')
@@ -16,11 +17,14 @@ md5sums=('0aa0bb74087e85f2b693517dfb240513')
 sha256sums=('691b4d9bbae0314e64e9d3c39c98706adfb06804dfbece342c65a2d50d74e593')
 
 build() {
-  cd $startdir/src
-  mv download_script.php?src_id=$_scriptid buftabs.vim
+	cd ${srcdir}
 
-  installpath="$pkgdir/usr/share/vim/vimfiles"
+	mv download_script.php?src_id=$_scriptid buftabs.vim
+}
 
-  mkdir -p $installpath/plugin/
-  install -m644 buftabs.vim $installpath/plugin/
+package() {
+	cd ${srcdir}
+
+	installpath="${pkgdir}/usr/share/vim/vimfiles"
+	install -Dm644 buftabs.vim $installpath/plugin/buftabs.vim
 }
