Move to splitpkg format
git-svn-id: file:///srv/repos/svn-packages/svn@69008 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/vim-colorsamplerpack/trunk/PKGBUILD
+++ b/vim-colorsamplerpack/trunk/PKGBUILD
@@ -1,5 +1,6 @@
 # $Id$
-# Maintainer : Aaron Griffin <aaron@archlinux.org>
+# Contributor: Aaron Griffin <aaron@archlinux.org>
+# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=vim-colorsamplerpack
 pkgver=8.03
@@ -18,14 +19,19 @@ md5sums=('71d097ce83e4a0896843c8819f175aef'
 	'f4639ddafc68f49395c25fb4caf0d6f7')
 
 build() {
-  cd ${srcdir}/colors
-  # This already exist... we can't update it 8(
-  rm torte.vim
+	cd ${srcdir}/colors
+	# This already exist... we can't update it 8(
+	rm torte.vim
+}
 
-  cd ${srcdir}
-  installpath="$pkgdir/usr/share/vim/vim72"
-  install -d $installpath/colors/
-  install -m644 colors/* $installpath/colors || return 1
-  install -D -m644 plugin/color_sample_pack.vim $installpath/plugin/themes.vim || return 1
-  install -D -m644 LICENSE ${pkgdir}/usr/share/licenses/${pkgname}/LICENSE || return 1
+package() {
+	cd ${srcdir}
+	installpath="${pkgdir}/usr/share/vim/vim72"
+
+	install -d $installpath/colors/
+	install -m644 colors/* $installpath/colors || return 1
+	install -D -m644 plugin/color_sample_pack.vim \
+	   $installpath/plugin/themes.vim || return 1
+	install -D -m644 LICENSE \
+	   ${pkgdir}/usr/share/licenses/${pkgname}/LICENSE || return 1
 }
