Move to splitpkg format
git-svn-id: file:///srv/repos/svn-packages/svn@69009 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/vim-doxygentoolkit/trunk/PKGBUILD
+++ b/vim-doxygentoolkit/trunk/PKGBUILD
@@ -1,5 +1,6 @@
 # $Id$
-# Maintainer : Aaron Griffin <aaron@archlinux.org>
+# Contributor Aaron Griffin <aaron@archlinux.org>
+# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=vim-doxygentoolkit
 pkgver=0.2.7
@@ -15,8 +16,13 @@ source=(DoxygenToolkit.vim::"http://www.vim.org/scripts/download_script.php?src_
 md5sums=('a5954aac19f782d538a55a76cfdab90f')
 
 build() {
-  cd $srcdir
+	/bin/true
+}
 
-  installpath="$pkgdir/usr/share/vim/vimfiles"
-  install -D -m644 DoxygenToolkit.vim $installpath/plugin/DoxygenToolkit.vim || return 1
+package() {
+	cd ${srcdir}
+
+	installpath="${pkgdir}/usr/share/vim/vimfiles"
+	install -D -m644 DoxygenToolkit.vim \
+	   $installpath/plugin/DoxygenToolkit.vim || return 1
 }
