git-svn-id: file:///srv/repos/svn-packages/svn@69161 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/menu-cache/trunk/PKGBUILD
+++ b/menu-cache/trunk/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Juergen Hoetzel <juergen@archlinux.org>
 
 pkgname=menu-cache
-pkgver=0.2.6
+pkgver=0.3.1
 pkgrel=1
 pkgdesc="Caches to speed up freedesktop.org's application menus use."
 arch=('i686' 'x86_64')
@@ -11,13 +11,17 @@ groups=('lxde')
 depends=('intltool' 'glib2')
 options=('!libtool')
 makedepends=('pkgconfig')
-source=(http://downloads.sourceforge.net/sourceforge/lxde/$pkgname-$pkgver.tar.gz)
-md5sums=('114498e13525dd13cbfdce513d22b083')
+source=(http://downloads.sourceforge.net/sourceforge/lxde/${pkgname}-${pkgver}.tar.gz)
+md5sums=('311949c715333590d8bbc54682d8c60c')
 
 build() {
-  cd "$srcdir/$pkgname-$pkgver"
-  ./configure --prefix=/usr --sysconfdir=/etc \
-  --libexecdir=/usr/lib/menu-cache --disable-static || return 1
-  make || return 1
-  make DESTDIR="$pkgdir" install || return 1
+	cd "${srcdir}/${pkgname}-${pkgver}"
+	./configure --prefix=/usr --sysconfdir=/etc \
+	  --libexecdir=/usr/lib/menu-cache --disable-static || return 1
+	make || return 1
+}
+
+package() {
+	cd ${srcdir}/${pkgname}-${pkgver}
+	make DESTDIR="${pkgdir}" install || return 1
 }
